Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116445

[REG][Windows] Crash on NativeSkiaOutputDevice::releaseTexture() with nullptr access

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.0 FF
    • 6.5.2, 6.5.3, 6.6.0 Beta3
    • WebEngine
    • None
    • Windows
    • 8cef10f4f (dev), ffb857e9d (dev), 69c0ca317 (6.6), 1048b43ef (6.6.0), fd3fd9ea0 (6.6), 4e273b2b3 (6.5), 864b08394 (6.5.3), 8ed9df0eb (6.6.0), 2ec0171d4 (dev), 2cbb620b2 (6.6)

      I started to notice such crashes after updating an app to Qt 6.5.2 among our users crash reports.
      It doesn't reproduce for me locally so I can't provide a lot of details, sorry.

      Unhandled exception thrown: read access violation.
      this->_Callee.**qtTexture** was nullptr.
      

      Call stack:

       	[Inline Frame] Qt6WebEngineCore.dll!QtWebEngineCore::NativeSkiaOutputDevice::texture::__l7::<lambda_bf106c6784d8c163586d1c0ac0112ad9>::operator()() Line 393	C++
       	[Inline Frame] Qt6WebEngineCore.dll!std::invoke(QtWebEngineCore::NativeSkiaOutputDevice::texture::__l7::<lambda_bf106c6784d8c163586d1c0ac0112ad9> &) Line 1524	C++
       	[Inline Frame] Qt6WebEngineCore.dll!std::_Invoker_ret<void,1>::_Call(QtWebEngineCore::NativeSkiaOutputDevice::texture::__l7::<lambda_bf106c6784d8c163586d1c0ac0112ad9> &) Line 651	C++
       	Qt6WebEngineCore.dll!std::_Func_impl_no_alloc<<lambda_bf106c6784d8c163586d1c0ac0112ad9>,void>::_Do_call() Line 822	C++
       	[Inline Frame] Qt6WebEngineCore.dll!std::_Func_class<void>::operator()() Line 869	C++
       	Qt6WebEngineCore.dll!QtWebEngineCore::NativeSkiaOutputDevice::Buffer::endPresent() Line 164	C++
      >	Qt6WebEngineCore.dll!QtWebEngineCore::NativeSkiaOutputDevice::releaseTexture() Line 336	C++
       	Qt6WebEngineCore.dll!QtWebEngineCore::RenderWidgetHostViewQtDelegateItem::onAfterRendering() Line 409	C++
       	[Inline Frame] Qt6Core.dll!QtPrivate::QSlotObjectBase::call(QObject *) Line 363	C++
       	Qt6Core.dll!doActivate<0>(QObject * sender, int signal_index, void * * argv) Line 3992	C++
       	Qt6Core.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 4053	C++
       	Qt6Quick.dll!QSGRenderThread::syncAndRender() Line 778	C++
       	Qt6Quick.dll!QSGRenderThread::run() Line 942	C++
       	Qt6Core.dll!QThreadPrivate::start(void * arg) Line 292	C++
       	kernel32.dll!BaseThreadInitThunk()	Unknown
       	ntdll.dll!RtlUserThreadStart()	Unknown
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            studiosus Vladimir Belyavsky
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: