Band aid fix for crashing D3D11 Warp setup

Rhi can decide to run D3D11 with the software rendering
through the software adapter aka "Microsoft Basic Render Driver".
This unfortunately does not work well with ANGLE as it can
use another adapter and sharing resources between
qt and skia can fail.

Try to guess which adapter might be used by rhi support
or rhi backing store support classes and pass luid for ANGLE.

Unfortunately this solution is far from perfect as
it creates QRhi just to check what might be used later,
however the user can select something totally different with
QQuickGraphicsConfiguration.

At lest for now we respect QSG_RHI_PREFER_SOFTWARE_RENDERER
and QT_D3D_ADAPTER_INDEX. Moreover this patch should cover
the case when rhi retrys with DXGI_ADAPTER_FLAG_SOFTWARE adapter
if accelerated adapter fails.

This is just a band aid patch to support windows on vm
and we should come up with better solution.

Fixes: QTBUG-116445
Pick-to: 6.6 6.5 6.6.0 6.5.3
Change-Id: I416dd82d688726ce872dc276570fe455d733a48e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>